--- a/Udemy/Maddo/Web_services_PHP_JSON_Mobile/app/EstudoDeCasoListar/app/src/main/res/values/strings.xml
+++ b/Udemy/Maddo/Web_services_PHP_JSON_Mobile/app/EstudoDeCasoListar/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
-    <string name="app_name">Estudo De Caso Listar</string>
+    <string name="app_name">Estudo De Caso Incluir</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_incluir">IncluirActivity</string>
 </resources>
