DesenvolvimentoAndroid: AppListaVip - refactor Layout

--- a/Udemy/Maddo/Desenvolvimento_Android_2023_13_apps_completas/AppListaVip/app/src/main/res/values/strings.xml
+++ b/Udemy/Maddo/Desenvolvimento_Android_2023_13_apps_completas/AppListaVip/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="txtclear">Limpar</string>
     <string name="txtSave">Guardar</string>
     <string name="txtFinish">Finalizar</string>
+    <string name="phone">Telefone</string>
 </resources>
