--- a/Udemy/Maddo/Desenvolvimento_Android_2023_13_apps_completas/AppListaVip/app/src/main/res/values-night/strings.xml
+++ b/Udemy/Maddo/Desenvolvimento_Android_2023_13_apps_completas/AppListaVip/app/src/main/res/values-night/strings.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="app_name">App Lista Vip</string>
+    <string name="name">Nome</string>
+    <string name="lastname">Sobrenome</string>
+    <string name="courseName">Nome do Curso</string>
+    <string name="phoneNumber">Número Telefone</string>
     <string name="txtclear">Limpar</string>
     <string name="txtSave">Guardar</string>
     <string name="txtFinish">Finalizar</string>
+    <string name="phone">Telefone</string>
 </resources>
