DesenvolvimentoAndroid: AppListaVip - Spinner: Layout created

--- a/Udemy/Maddo/Desenvolvimento_Android_2023_13_apps_completas/AppListaVip/app/src/main/res/values/strings.xml
+++ b/Udemy/Maddo/Desenvolvimento_Android_2023_13_apps_completas/AppListaVip/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="txtSave">Guardar</string>
     <string name="txtFinish">Finalizar</string>
     <string name="phone">Telefone</string>
+    <string name="selectCourse">Selecione um Curso:</string>
 </resources>
