--- a/Udemy/Maddo/Desenvolvimento_Android_2023_13_apps_completas/apps/AppGasEta/app/src/main/res/values/strings.xml
+++ b/Udemy/Maddo/Desenvolvimento_Android_2023_13_apps_completas/apps/AppGasEta/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">AppGasEta</string>
     <string name="txt_titulo">Gasolina x Etanol</string>
+    <string name="txt_calcular">Calcular</string>
+    <string name="txt_guardar">Guardar</string>
+    <string name="txt_limpar">Limpar</string>
+    <string name="txt_sair">Sair</string>
 </resources>
