--- a/Udemy/Maddo/Desenvolvimento_Android_2023_13_apps_completas/apps/AppGasEta/app/src/main/res/values/strings.xml
+++ b/Udemy/Maddo/Desenvolvimento_Android_2023_13_apps_completas/apps/AppGasEta/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="txt_guardar">Guardar</string>
     <string name="txt_limpar">Limpar</string>
     <string name="txt_sair">Sair</string>
+    <string name="txt_result">Resultado</string>
 </resources>
