Desenvolvimento Android 2023: AppGasEta - layout update

--- a/Udemy/Maddo/Desenvolvimento_Android_2023_13_apps_completas/apps/AppGasEta/app/src/main/res/values/strings.xml
+++ b/Udemy/Maddo/Desenvolvimento_Android_2023_13_apps_completas/apps/AppGasEta/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="txt_limpar">Limpar</string>
     <string name="txt_sair">Sair</string>
     <string name="txt_result">Resultado</string>
+    <string name="txt_hint_gasolina">R$ Gasolina</string>
+    <string name="txt_hint_etanol">R$ Etanol</string>
 </resources>
